--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -132,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30.3dp"
                     android:fontFamily="@font/poppins_regular"
-                    android:text="Password"
+                    android:text="Password (at least 6 digits)"
                     android:textColor="#c2c2c2"
                     android:textSize="13.3sp" />
 
