--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ababab"
-    tools:context=".ArrayListActivity">
+    android:background="#ababab">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/myListView"
+        android:id="@+id/myListView2"
         android:descendantFocusability="blocksDescendants"/>
 
 </LinearLayout>
