--- a/app/src/main/res/layout/activity_array_list.xml
+++ b/app/src/main/res/layout/activity_array_list.xml
@@ -11,7 +11,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/myListView"
+        android:id="@+id/myListView3"
         android:descendantFocusability="blocksDescendants"/>
 
 
