--- a/app/src/main/res/layout/fav_item.xml
+++ b/app/src/main/res/layout/fav_item.xml
@@ -4,45 +4,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants"
-    android:background="#ababab"
-    >
-
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="30dp"
-        android:background="@drawable/corners"
-        android:orientation="horizontal">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageItem"
-            android:layout_width="50dp"
+    android:background="#ababab">
+   <!--<RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="110dp">
+-->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginStart="20dp" />
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/corners"
+            android:orientation="horizontal">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:orientation="vertical">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imageItem"
+                android:layout_width="50dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="20dp" />
 
-            <TextView
-                android:id="@+id/textViewDesc"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="description"
-                android:textSize="21sp" />
-        </RelativeLayout>
+                android:layout_marginStart="20dp"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/textViewDesc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="description"
+                    android:textSize="21sp" />
+            </RelativeLayout>
 
-</RelativeLayout>
+        </LinearLayout>
 
-    </LinearLayout>
+    <!--</RelativeLayout>-->
+</LinearLayout>
