--- a/app/src/main/res/layout/fav_item.xml
+++ b/app/src/main/res/layout/fav_item.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants"
     android:background="#ababab">
-   <!--<RelativeLayout
+   <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="110dp">
--->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -41,5 +41,5 @@
 
         </LinearLayout>
 
-    <!--</RelativeLayout>-->
+    </RelativeLayout>
 </LinearLayout>
